REGRESSION(r280928) The smooth keyboard scrolling is unconditionally enabled for PageUp and PageDown keys https://bugs.webkit.org/show_bug.cgi?id=229733

Reviewed by Tim Horton.

Even though WinCairo port doesn't enable
EventHandlerDrivenSmoothKeyboardScrollingEnabled yet, it had been
enabled only for PageUp and PageDown keys since r280928. Other
keys (Space and Arrow keys) don't trigger the smooth scrolling.

r280928 changed to call startKeyboardScrolling for PageUp and
PageDown keys, but it didn't check the setting.

* page/EventHandler.cpp:
(WebCore::EventHandler::startKeyboardScrolling):
(WebCore::EventHandler::defaultKeyboardEventHandler):

Canonical link: https://commits.webkit.org/241197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281867 268f45cc-cd09-0410-ab3c-d52691b4dbfc